fixes and tests for capstone project